--- a/Audience.ioc
+++ b/Audience.ioc
@@ -139,29 +139,30 @@ Mcu.Pin12=PB14
 Mcu.Pin13=PB15
 Mcu.Pin14=PD13
 Mcu.Pin15=PG2
-Mcu.Pin16=PA11
-Mcu.Pin17=PA12
-Mcu.Pin18=PD3
-Mcu.Pin19=PD6
+Mcu.Pin16=PA9
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PD3
 Mcu.Pin2=PC1
-Mcu.Pin20=PD7
-Mcu.Pin21=PG9
-Mcu.Pin22=PG10
-Mcu.Pin23=PG11
-Mcu.Pin24=PB9
-Mcu.Pin25=VP_LWIP_VS_Enabled
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin28=VP_TIM1_VS_no_output1
-Mcu.Pin29=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
+Mcu.Pin20=PD6
+Mcu.Pin21=PD7
+Mcu.Pin22=PG9
+Mcu.Pin23=PG10
+Mcu.Pin24=PG11
+Mcu.Pin25=PB9
+Mcu.Pin26=VP_LWIP_VS_Enabled
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin29=VP_TIM1_VS_no_output1
 Mcu.Pin3=PA1
+Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_AUDIO_FS
 Mcu.Pin4=PA2
 Mcu.Pin5=PA3
 Mcu.Pin6=PA7
 Mcu.Pin7=PC4
 Mcu.Pin8=PC5
 Mcu.Pin9=PB11
-Mcu.PinsNb=30
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H743ZITx
@@ -208,6 +209,8 @@ PA7.GPIOParameters=GPIO_Speed
 PA7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
+PA9.Mode=Activate_VBUS
+PA9.Signal=USB_OTG_FS_VBUS
 PB11.GPIOParameters=GPIO_Speed
 PB11.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB11.Mode=RMII
@@ -309,7 +312,7 @@ ProjectManager.DeviceId=STM32H743ZITx
 ProjectManager.FirmwarePackage=STM32Cube FW_H7 V1.10.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x2000
+ProjectManager.HeapSize=0x4000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -345,17 +348,21 @@ RCC.D3PPRE=RCC_APB4_DIV2
 RCC.DFSDMACLkFreq_Value=192000000
 RCC.DFSDMFreq_Value=96000000
 RCC.DIVM1=8
+RCC.DIVM3=8
 RCC.DIVN1=375
+RCC.DIVN3=375
 RCC.DIVP1Freq_Value=384000000
 RCC.DIVP2Freq_Value=33024000
-RCC.DIVP3Freq_Value=33024000
+RCC.DIVP3=16
+RCC.DIVP3Freq_Value=48000000
 RCC.DIVQ1=4
 RCC.DIVQ1Freq_Value=192000000
 RCC.DIVQ2Freq_Value=33024000
-RCC.DIVQ3Freq_Value=33024000
+RCC.DIVQ3=16
+RCC.DIVQ3Freq_Value=48000000
 RCC.DIVR1Freq_Value=384000000
 RCC.DIVR2Freq_Value=33024000
-RCC.DIVR3Freq_Value=33024000
+RCC.DIVR3Freq_Value=384000000
 RCC.FDCANFreq_Value=192000000
 RCC.FMCFreq_Value=192000000
 RCC.FamilyName=M
@@ -366,12 +373,12 @@ RCC.HRTIMFreq_Value=192000000
 RCC.HSE_VALUE=16384000
 RCC.I2C123Freq_Value=96000000
 RCC.I2C4Freq_Value=96000000
-RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVN1,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
+RCC.IPParameters=ADCFreq_Value,AHB12Freq_Value,AHB4Freq_Value,APB1Freq_Value,APB2Freq_Value,APB3Freq_Value,APB4Freq_Value,AXIClockFreq_Value,CECFreq_Value,CKPERFreq_Value,CortexFreq_Value,CpuClockFreq_Value,D1CPREFreq_Value,D1PPRE,D2PPRE1,D2PPRE2,D3PPRE,DFSDMACLkFreq_Value,DFSDMFreq_Value,DIVM1,DIVM3,DIVN1,DIVN3,DIVP1Freq_Value,DIVP2Freq_Value,DIVP3,DIVP3Freq_Value,DIVQ1,DIVQ1Freq_Value,DIVQ2Freq_Value,DIVQ3,DIVQ3Freq_Value,DIVR1Freq_Value,DIVR2Freq_Value,DIVR3Freq_Value,FDCANFreq_Value,FMCFreq_Value,FamilyName,HCLK3ClockFreq_Value,HCLKFreq_Value,HPRE,HRTIMFreq_Value,HSE_VALUE,I2C123Freq_Value,I2C4Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM345Freq_Value,LPUART1Freq_Value,LTDCFreq_Value,MCO1PinFreq_Value,MCO2PinFreq_Value,PLL2FRACN,PLL3FRACN,PLLFRACN,PLLSourceVirtual,QSPIFreq_Value,RNGFreq_Value,RTCFreq_Value,SAI1Freq_Value,SAI23Freq_Value,SAI4AFreq_Value,SAI4BFreq_Value,SDMMCFreq_Value,SPDIFRXFreq_Value,SPI123Freq_Value,SPI45Freq_Value,SPI6Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,Tim1OutputFreq_Value,Tim2OutputFreq_Value,TraceFreq_Value,USART16Freq_Value,USART234578Freq_Value,USBCLockSelection,USBFreq_Value,VCO1OutputFreq_Value,VCO2OutputFreq_Value,VCO3OutputFreq_Value,VCOInput1Freq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value
 RCC.LPTIM1Freq_Value=96000000
 RCC.LPTIM2Freq_Value=96000000
 RCC.LPTIM345Freq_Value=96000000
 RCC.LPUART1Freq_Value=96000000
-RCC.LTDCFreq_Value=33024000
+RCC.LTDCFreq_Value=384000000
 RCC.MCO1PinFreq_Value=64000000
 RCC.MCO2PinFreq_Value=384000000
 RCC.PLL2FRACN=0
@@ -398,14 +405,14 @@ RCC.Tim2OutputFreq_Value=192000000
 RCC.TraceFreq_Value=64000000
 RCC.USART16Freq_Value=96000000
 RCC.USART234578Freq_Value=96000000
-RCC.USBCLockSelection=RCC_USBCLKSOURCE_HSI48
+RCC.USBCLockSelection=RCC_USBCLKSOURCE_PLL3
 RCC.USBFreq_Value=48000000
 RCC.VCO1OutputFreq_Value=768000000
 RCC.VCO2OutputFreq_Value=66048000
-RCC.VCO3OutputFreq_Value=66048000
+RCC.VCO3OutputFreq_Value=768000000
 RCC.VCOInput1Freq_Value=2048000
 RCC.VCOInput2Freq_Value=512000
-RCC.VCOInput3Freq_Value=512000
+RCC.VCOInput3Freq_Value=2048000
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
 SPI1.CalculateBaudRate=48.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
@@ -426,14 +433,16 @@ TIM1.IPParameters=Channel-Output Compare1 No Output,Prescaler,Period,ClockDivisi
 TIM1.Period=9
 TIM1.Prescaler=99
 USB_DEVICE.CLASS_NAME_FS=AUDIO
-USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-AUDIO_FS,MANUFACTURER_STRING-AUDIO_FS,PRODUCT_STRING_AUDIO_FS,USBD_DEBUG_LEVEL-AUDIO_FS
+USB_DEVICE.IPParameters=VirtualModeFS,CLASS_NAME_FS,VirtualMode-AUDIO_FS,MANUFACTURER_STRING-AUDIO_FS,PRODUCT_STRING_AUDIO_FS,USBD_DEBUG_LEVEL-AUDIO_FS,USBD_AUDIO_FREQ-AUDIO_FS
 USB_DEVICE.MANUFACTURER_STRING-AUDIO_FS=Skrrmrchoh
 USB_DEVICE.PRODUCT_STRING_AUDIO_FS=Audience
+USB_DEVICE.USBD_AUDIO_FREQ-AUDIO_FS=48000
 USB_DEVICE.USBD_DEBUG_LEVEL-AUDIO_FS=0
 USB_DEVICE.VirtualMode-AUDIO_FS=Audio
 USB_DEVICE.VirtualModeFS=Audio_FS
-USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.IPParameters=VirtualMode,lpm_enable
 USB_OTG_FS.VirtualMode=Device_Only
+USB_OTG_FS.lpm_enable=DISABLE
 VP_LWIP_VS_Enabled.Mode=Enabled
 VP_LWIP_VS_Enabled.Signal=LWIP_VS_Enabled
 VP_SYS_VS_Systick.Mode=SysTick
